# Goal-to-Evaluator-Compiler

./: .gitignore  README.md  pyproject.toml
adapters/: __init__.py  interactive.py
core/: __init__.py  compiler.py  elicitor.py  judge.py  schemas.py
examples/: ambiguous_goal.py  clear_goal.py  rollback_case.py
skills/: goal-eval.md
skills/goal-eval/: SKILL.md
tests/: test_compiler.py  test_elicitor.py  test_integration.py  test_judge.py  test_schemas.py
